// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select disabled select has a different style 1`] = `
.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c7 {
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgba(0,0,0,0.19);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 128px;
  overflow-y: auto;
  position: absolute;
  width: 100%;
}

.c7:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c8 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  padding: 0;
  width: 100%;
}

.c8:not(:last-child):after {
  content: "";
  border-bottom: solid 1px #DBDEE1;
  display: block;
  margin: var(--spacing-base);
  position: relative;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9:focus {
  outline: none;
}

.c1 {
  position: relative;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #DBDEE1;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: default;
}

.c4 svg {
  color: #B7BBC2;
}

.c5 {
  background-color: #F1F2F2;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c5:hover {
  cursor: default;
}

.c5::-webkit-input-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5::-moz-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5:-ms-input-placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c5::placeholder {
  color: #B7BBC2;
  font-size: 0.875rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
  >
    Select an option
  </label>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    class="c4"
    data-testid="input-wrapper"
    disabled=""
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-label="Select an option"
      aria-multiline="false"
      class="c5"
      data-testid="input"
      disabled=""
      type="text"
      value=""
    />
    <button
      class="c6"
      data-testid="arrow"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </div>
  <div
    aria-multiselectable="false"
    class="c7"
    role="listbox"
    tabindex="0"
  >
    <ul
      aria-labelledby="group-0"
      class="c8"
      data-testid="listbox-list"
      role="group"
    >
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-on"
        id="listbox_undefined_on"
        role="option"
      >
        Ontario
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-qc"
        id="listbox_undefined_qc"
        role="option"
      >
        Quebec
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-bc"
        id="listbox_undefined_bc"
        role="option"
      >
        British Columbia
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-ab"
        id="listbox_undefined_ab"
        role="option"
      >
        Alberta
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-mb"
        id="listbox_undefined_mb"
        role="option"
      >
        Manitoba
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-sk"
        id="listbox_undefined_sk"
        role="option"
      >
        Saskatchewan
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-ns"
        id="listbox_undefined_ns"
        role="option"
      >
        Nova Scotia
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-nb"
        id="listbox_undefined_nb"
        role="option"
      >
        New Brunswick
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-nl"
        id="listbox_undefined_nl"
        role="option"
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-pe"
        id="listbox_undefined_pe"
        role="option"
      >
        Prince Edward Island
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-nt"
        id="listbox_undefined_nt"
        role="option"
      >
        Northwest Territories
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-nu"
        id="listbox_undefined_nu"
        role="option"
      >
        Nunavut
      </li>
      <li
        aria-selected="false"
        class="c9"
        data-testid="listitem-yt"
        id="listbox_undefined_yt"
        role="option"
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;

exports[`Select invalid select has a different style 1`] = `
Array [
  .c4 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c6 {
  margin-left: var(--spacing-base);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-half);
}

.c10 {
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgba(0,0,0,0.19);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 128px;
  overflow-y: auto;
  position: absolute;
  width: 100%;
}

.c10:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c11 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  padding: 0;
  width: 100%;
}

.c11:not(:last-child):after {
  content: "";
  border-bottom: solid 1px #DBDEE1;
  display: block;
  margin: var(--spacing-base);
  position: relative;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c12:focus {
  outline: none;
}

.c1 {
  position: relative;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c7:hover {
  cursor: pointer;
}

.c7 svg {
  color: #60666E;
}

.c8 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c8:hover {
  cursor: pointer;
}

.c8::-webkit-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c8::-moz-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c8:-ms-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c8::placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
    >
      Select an option
    </label>
    <div
      aria-live="polite"
      class="c4"
      id="undefined_invalid"
      role="alert"
    >
      <div
        class="c5"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </div>
      <span
        class="c6"
      >
        You must select an option
      </span>
    </div>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      class="c7"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-label="Select an option"
        aria-multiline="false"
        class="c8"
        data-testid="input"
        type="text"
        value=""
      />
      <button
        class="c9"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      aria-multiselectable="false"
      class="c10"
      role="listbox"
      tabindex="0"
    >
      <ul
        aria-labelledby="group-0"
        class="c11"
        data-testid="listbox-list"
        role="group"
      >
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-on"
          id="listbox_undefined_on"
          role="option"
        >
          Ontario
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-qc"
          id="listbox_undefined_qc"
          role="option"
        >
          Quebec
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-bc"
          id="listbox_undefined_bc"
          role="option"
        >
          British Columbia
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-ab"
          id="listbox_undefined_ab"
          role="option"
        >
          Alberta
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-mb"
          id="listbox_undefined_mb"
          role="option"
        >
          Manitoba
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-sk"
          id="listbox_undefined_sk"
          role="option"
        >
          Saskatchewan
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-ns"
          id="listbox_undefined_ns"
          role="option"
        >
          Nova Scotia
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-nb"
          id="listbox_undefined_nb"
          role="option"
        >
          New Brunswick
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-nl"
          id="listbox_undefined_nl"
          role="option"
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-pe"
          id="listbox_undefined_pe"
          role="option"
        >
          Prince Edward Island
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-nt"
          id="listbox_undefined_nt"
          role="option"
        >
          Northwest Territories
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-nu"
          id="listbox_undefined_nu"
          role="option"
        >
          Nunavut
        </li>
        <li
          aria-selected="false"
          class="c12"
          data-testid="listitem-yt"
          id="listbox_undefined_yt"
          role="option"
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    data-testid="select-skip-option"
    name="undefined_skip"
    type="radio"
    value="skip"
  />,
  .c1 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c1:hover {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

input[type="checkbox"]:checked + .c0,input[type="radio"]:checked + .c1 {
  background: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,input[type="radio"]:focus + .c1 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

input[type="checkbox"]:disabled + .c0,input[type="radio"]:disabled + .c1 {
  background: #F1F2F2;
  border-color: #DBDEE1;
  color: #B7BBC2;
  cursor: auto;
}

.c1 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c1 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0 c1"
  >
    Skip this question
  </label>,
]
`;

exports[`Select matches the snapshot 1`] = `
Array [
  .c3 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c7 {
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgba(0,0,0,0.19);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 128px;
  overflow-y: auto;
  position: absolute;
  width: 100%;
}

.c7:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c8 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  padding: 0;
  width: 100%;
}

.c8:not(:last-child):after {
  content: "";
  border-bottom: solid 1px #DBDEE1;
  display: block;
  margin: var(--spacing-base);
  position: relative;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  overflow: hidden;
  padding: 0 8px 0 var(--spacing-4x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9:focus {
  outline: none;
}

.c1 {
  position: relative;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 32px;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c4:hover {
  cursor: pointer;
}

.c4 svg {
  color: #60666E;
}

.c5 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c5:hover {
  cursor: pointer;
}

.c5::-webkit-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5::-moz-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5:-ms-input-placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c5::placeholder {
  color: #60666E;
  font-size: 0.875rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
    class="c0 c1"
  >
    <label
      class="c2 c3"
    >
      Select an option
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="listbox_undefined"
      class="c4"
      data-testid="input-wrapper"
    >
      <input
        aria-autocomplete="list"
        aria-controls="listbox_undefined"
        aria-label="Select an option"
        aria-multiline="false"
        class="c5"
        data-testid="input"
        type="text"
        value=""
      />
      <button
        class="c6"
        data-testid="arrow"
        tabindex="-1"
        type="button"
      >
        <svg
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </div>
    <div
      aria-multiselectable="false"
      class="c7"
      role="listbox"
      tabindex="0"
    >
      <ul
        aria-labelledby="group-0"
        class="c8"
        data-testid="listbox-list"
        role="group"
      >
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-on"
          id="listbox_undefined_on"
          role="option"
        >
          Ontario
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-qc"
          id="listbox_undefined_qc"
          role="option"
        >
          Quebec
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-bc"
          id="listbox_undefined_bc"
          role="option"
        >
          British Columbia
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-ab"
          id="listbox_undefined_ab"
          role="option"
        >
          Alberta
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-mb"
          id="listbox_undefined_mb"
          role="option"
        >
          Manitoba
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-sk"
          id="listbox_undefined_sk"
          role="option"
        >
          Saskatchewan
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-ns"
          id="listbox_undefined_ns"
          role="option"
        >
          Nova Scotia
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-nb"
          id="listbox_undefined_nb"
          role="option"
        >
          New Brunswick
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-nl"
          id="listbox_undefined_nl"
          role="option"
        >
          Newfoundland and Labrador
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-pe"
          id="listbox_undefined_pe"
          role="option"
        >
          Prince Edward Island
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-nt"
          id="listbox_undefined_nt"
          role="option"
        >
          Northwest Territories
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-nu"
          id="listbox_undefined_nu"
          role="option"
        >
          Nunavut
        </li>
        <li
          aria-selected="false"
          class="c9"
          data-testid="listitem-yt"
          id="listbox_undefined_yt"
          role="option"
        >
          Yukon
        </li>
      </ul>
    </div>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    class="c0"
    data-testid="select-skip-option"
    name="undefined_skip"
    type="radio"
    value="skip"
  />,
  .c1 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c1:hover {
  background: #DBDEE1;
  border-color: #DBDEE1;
}

input[type="checkbox"]:checked + .c0,input[type="radio"]:checked + .c1 {
  background: #006296;
  border-color: #006296;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,input[type="radio"]:focus + .c1 {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

input[type="checkbox"]:disabled + .c0,input[type="radio"]:disabled + .c1 {
  background: #F1F2F2;
  border-color: #DBDEE1;
  color: #B7BBC2;
  cursor: auto;
}

.c1 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c1 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    class="c0 c1"
  >
    Skip this question
  </label>,
]
`;

exports[`Select mobile select has a different style 1`] = `
.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #DBDEE1,0 10px 20px 0 rgba(0,0,0,0.19);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 160px;
  overflow-y: auto;
  position: absolute;
  width: 100%;
}

.c5:focus {
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c6 {
  background-color: #FFFFFF;
  list-style-type: none;
  margin: 0;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  padding: 0;
  width: 100%;
}

.c6:not(:last-child):after {
  content: "";
  border-bottom: solid 1px #DBDEE1;
  display: block;
  margin: var(--spacing-base);
  position: relative;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  height: 40px;
  line-height: 40px;
  overflow: hidden;
  padding: 0 16px 0 var(--spacing-5x);
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:focus {
  outline: none;
}

.c1 {
  position: relative;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  padding-right: var(--spacing-1x);
  width: 100%;
}

.c2:hover {
  cursor: pointer;
}

.c2 svg {
  color: #60666E;
}

.c3 {
  background-color: #FFFFFF;
  border: none;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  caret-color: transparent;
  font-size: 1rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  max-height: 100%;
  min-width: 0;
  outline: none;
  overflow: hidden;
  padding: var(--spacing-1x) 0 var(--spacing-1x) var(--spacing-1x);
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 100%;
}

.c3:hover {
  cursor: pointer;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3::-moz-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3:-ms-input-placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c3::placeholder {
  color: #60666E;
  font-size: 1rem;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0 c1"
>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="listbox_undefined"
    class="c2"
    data-testid="input-wrapper"
  >
    <input
      aria-autocomplete="list"
      aria-controls="listbox_undefined"
      aria-label="Select an option"
      aria-multiline="false"
      class="c3"
      data-testid="input"
      type="text"
      value=""
    />
    <button
      class="c4"
      data-testid="arrow"
      tabindex="-1"
      type="button"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
  </div>
  <div
    aria-multiselectable="false"
    class="c5"
    role="listbox"
    tabindex="0"
  >
    <ul
      aria-labelledby="group-0"
      class="c6"
      data-testid="listbox-list"
      role="group"
    >
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-on"
        id="listbox_undefined_on"
        role="option"
      >
        Ontario
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-qc"
        id="listbox_undefined_qc"
        role="option"
      >
        Quebec
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-bc"
        id="listbox_undefined_bc"
        role="option"
      >
        British Columbia
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-ab"
        id="listbox_undefined_ab"
        role="option"
      >
        Alberta
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-mb"
        id="listbox_undefined_mb"
        role="option"
      >
        Manitoba
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-sk"
        id="listbox_undefined_sk"
        role="option"
      >
        Saskatchewan
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-ns"
        id="listbox_undefined_ns"
        role="option"
      >
        Nova Scotia
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-nb"
        id="listbox_undefined_nb"
        role="option"
      >
        New Brunswick
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-nl"
        id="listbox_undefined_nl"
        role="option"
      >
        Newfoundland and Labrador
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-pe"
        id="listbox_undefined_pe"
        role="option"
      >
        Prince Edward Island
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-nt"
        id="listbox_undefined_nt"
        role="option"
      >
        Northwest Territories
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-nu"
        id="listbox_undefined_nu"
        role="option"
      >
        Nunavut
      </li>
      <li
        aria-selected="false"
        class="c7"
        data-testid="listitem-yt"
        id="listbox_undefined_yt"
        role="option"
      >
        Yukon
      </li>
    </ul>
  </div>
</div>
`;
